Skip to content

First "toggle subtitles" hotkey switches to default sub track

Hi! I am using Win10 Pro x64 1511, tried on vlc 2.2.2 and the latest build vlc-3.0.0-git-20160309-0402-win64 My hardware is: QuadCore Intel Core i5-4670K, Gigabyte GA-Z87X-UD3H, AMD Radeon HD 7800 Series, on-board sound card. Steps to reproduce:

  1. Set "enable subtitles", "preferred subtitle language" - "en,"
  2. Play a mkv movie with 2 or more sub tracks in which English is not a default sub track. I have track 1 - Russian and track 2 - English.
  3. The movie starts with English subs.
  4. Press "toggle sub" hotkey (Shift+v)
  5. VLC switches to default (russian) sub track instead of turning subs off. Bug occurs every time.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information